optimize imports make class names use PascalCase convert InstructionPtr to a record fix couple DebugLib bugs (still have to figure out stack traces) rewrite a lot of TypeTest.java to use method references and lambdas instead of reflection